	the file is reloaded. Upon finding an old auth file with an old format, an
	upgrade to the new format is made, file saved, and reloaded.
	* Authentication no longer requires a username/password. If one or both of
	these is missing, an authentication error will be sent to the client
	which sould then ask the username/password to the user.

==== GtkUI ====
	* Fix uncaught exception when closing deluge in classic mode
	* Allow changing ownership of torrents
	* Host entries in the Connection Manager UI are now editable. They're
	now also migrated from the old format were automatic localhost logins were
	possible, which no longer is, this fixes #1814.

==== WebUI ====
	* Migrate to ExtJS 3.1
	* Add gzip compression of HTTP data to the server
	* Improve the efficiency of the TorrentGrid

==== Blocklist ====
	* Implement local blocklist support
	* #861: Pause transfers until blocklist is imported

=== Deluge 1.2.0 - "Bursting like an infected kidney" (10 January 2010) ===
==== Core ====
	* Implement new RPC protocol DelugeRPC replacing XMLRPC
	* Move to a twisted framework
	* Add an 'Error' filter for Trackers to show trackers that currently have a tracker error
	* Use system GeoIP database if available, this is now an optional dependency

==== GtkUI ====
	* Remove SignalReceiver
	* Implemented a cross-platform IPC method thus removing the DBUS dependency
	* Implement a "True" Classic Mode where there is no longer a separate daemon process
	* Add preferences option "Add torrent in paused state"
	* Add tracker icons to the Tracker column
	* Implement #259 show tooltip with country name in the peers tab
	* Add an error category to the tracker sidebar list
	* Add Find More Plugins button to Plugins preference page
	* Fix #518 remove header in add torrent dialog to save vertical space
	* Add a Cache preferences page to adjust cache settings and examine cache status
	* Add ability to rename files prior to adding them
	* Fix shutdown handler with GNOME session manager